2020-07-19  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.map/maps-int-structs-12.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2020-07-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_type_struct): Handle offset
	fields.
	* libpoke/pkl-gen.pks (struct_mapper): Support offset fields in
	integral structs.
	(struct_field_extractor): Likewise.
	* testsuite/poke.pkl/int-struct-type-diag-12.pk: New test.
	* testsuite/poke.map/maps-int-structs-11.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-10.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
	* pickles/ctf.pk (CTF_Name): Turn into an integral struct.

2020-07-19  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/elf.pk (Elf64_RelInfo): Turn into an integral struct.
	(st_info): Likewise.
	* pickles/ctf.pk (CTF_Type_Id): Likewise.
	(CTF_Info): Likewise.

2020-07-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_mapper): Use null as a dummy and not
	an uint<64>0.

2020-07-19  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/Makefile.am (EXTRA_DIST): Add missing tests.

2020-07-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y (struct_type_specifier): Register one more
	dummy.
	* libpoke/pkl-gen.pks (struct_mapper): Support for mapping
	integral structs.
	(struct_constructor): Match the lexical
	structure of struct_mapper.
	(struct_field_mapper): Adapt to new lexical structure of
	struct_mapper.
	(struct_field_extractor): New macro.
	(handle_struct_field_constraints): New macro.
	* libpoke/pkl-typify.c (pkl_typify1_ps_type_struct): Do not allow
	integral structs inside other integral structs.
	* testsuite/poke.pkl/int-struct-type-diag-10.pk: Adapt accordingly.
	* testsuite/poke.pkl/int-struct-type-diag-8.pk: Likewise.
	* testsuite/poke.pkl/int-struct-type-diag-9.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-1.pk: New test.
	* testsuite/poke.map/maps-int-structs-2.pk: Likewise.