@@ -1,5 +1,15 @@
 2020-07-19  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-ast.h (PKL_AST_TYPE_S_PINNED_P): Renamed from
+	PKL_AST_TYPE_S_PINNED.
+	* libpoke/pkl-ast.c (pkl_ast_make_struct_type): Adapt accordingly.
+	(pkl_ast_dup_type): Likewise.
+	(pkl_ast_print_1): Likewise.
+	* libpoke/pkl-gen.pks (struct_mapper): Likewise.
+	(struct_constructor): Likewise.
+
+2020-07-19  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* testsuite/poke.map/maps-int-structs-12.pk: New test.
 	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
 
